src/components/common/Transition/style.module.scss
.transitionContainer {
    position: fixed;
    left: 0;
    width: 100vw;
    height: calc(100vh + 300px);
    overflow: visible;
    background: transparent;
    z-index: 1000;
    pointer-events: none;
    display: flex;
    align-items: center;
    justify-content: center;

    .label {
        position: relative;
        z-index: 1001;
        color: white;
        font-size: 40px;
        font-family: 'Inter', sans-serif;
        font-weight: 300;
        pointer-events: none;
    }

    svg {
        position: absolute;
        width: 100vw;
        height: 100vh;
        top: 0;
        left: 0;
        pointer-events: none;

        path {
            fill: #141516;
        }
    }
}

